orchestrator-worker/k8s-template/test-compute-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ubuntu
---
apiVersion: v1
kind: Pod
metadata:
  name: vmish-0
  namespace: test-ubuntu
spec:
  runtimeClassName: gvisor
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: data-0
  containers:
    - name: app
      image: hcp_ubuntu:v1.0.0
      imagePullPolicy: IfNotPresent
      command: ["/usr/local/bin/entrypoint"]
      resources:
        requests:
          cpu: "200m"
          memory: "512Mi"
        limits:
          cpu: "200m"
          memory: "512Mi"
      volumeMounts:
        - name: data
          mountPath: /data
